libs/parser/testdata/errors/inline_ref_invalid_alias.csl.disabled
infrastructure:
	bad_ref: reference:invalid alias:path.to.value  # Invalid: space in alias
